--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
+    "docker:install": "docker-compose -f docker/dev/docker-compose.builder.yml run --rm install",
+    "docker:dev": "docker-compose -f docker/dev/docker-compose.dev.yml --project-directory=. up",
+    "docker:bash": "docker-compose -f docker/dev/docker-compose.dev.yml --project-directory=. exec api bash",
     "dev": "nodemon --exec ts-node --files src/app.ts",
     "build": "cd src && tsc",
-    "start": "npm run build && node build/app",
+    "prod": "npm run build && NODE_ENV=production node build/app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kyler Swanson",
@@ -14,14 +17,18 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "module-alias": "^2.2.2",
+    "mongoose": "^5.8.11",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/lodash": "^4.14.149",
+    "@types/mongoose": "^5.7.0",
     "@types/node": "^13.5.2",
     "eslint": "^6.8.0",
     "nodemon": "^2.0.2",
